# smart-media-organizer

./: .gitignore  README.md  TECH_STACK.md  plan.md  pyproject.toml
src/smart_media_organizer/: __init__.py
src/smart_media_organizer/core/: scanner.py
src/smart_media_organizer/models/: config.py  media_file.py  movie.py  tv_show.py
src/smart_media_organizer/services/: media_parser.py
src/smart_media_organizer/utils/: file_ops.py  formatting.py  logging.py  rate_limiter.py  retry.py
tests/: conftest.py
tests/unit/: test_logging.py  test_media_parser.py  test_models.py  test_scanner.py
